# number-token-loss

./: .gitattributes  .gitignore  LICENSE  README.md  demo.ipynb  nohup.out  pyproject.toml  regression_transformer_number_tokens.txt  regression_transformer_number_tokens_.txt  requirements.txt  run_eval.sh  run_train.sh  run_train_cooking.sh  test_dist_loss.ipynb
.github/workflows/: ci.yml  pypi.yml  python-tests.yml
benchmarking/: benchmark-analysis.ipynb  benchmark_results_173393122115.csv  benchmark_results_173393181133.csv  benchmark_results_173393229602.csv  benchmark_results_173393274483.csv  config.yaml  config_173393122115.yaml  config_173393181133.yaml  config_173393229602.yaml  loss-benchmarking.py  loss_function_benchmark.py  plot.ipynb  runtime_sanity_check.py
config/: config.yaml
config/dataset_args/: arithmetic.yaml  arithmetics.yaml  debug.yaml  era5.yaml  ettm1.yaml  exchange.yaml  expression.yaml  gsm8k.yaml  mathematics_dataset.yaml  multiplication.yaml  multirc.yaml  rjokes.yaml
config/hydra_config/: config.yaml
config/model_args/: bert_ntl.yaml  gpt2.yaml  gpt2_ntl.yaml  granite_ntl.yaml  llama_ntl.yaml  rt.yaml  rt_ntl.yaml  vanilla_t5.yaml  vanilla_t5_custom_tokenizer.yaml  vanilla_t5_expression.yaml  vanilla_t5_ntl.yaml  vanilla_t5_ntl_default_tokenizer.yaml  (+2 more)
docs/: index.html  styles.css
gh-page/: index.html
ntloss/: README.md  pyproject.toml
ntloss/ntloss/: __init__.py  core.py  utils.py
ntloss/tests/: test_ntloss.py
scripts/: llama.py  loss_integration.ipynb  test_dist_loss.ipynb  train_tinygsm.jsonl  train_tinygsm.jsonl.REMOVED.git-id
src/: args.py  data.py  evaluation.py  get_cooking_data.py  number_token_loss.py  run_language_modeling.py  run_language_modeling_recipes.py  trainer.py
tests/: test_evaluation.py  test_gaussian_smoother.py  test_label_smoother.py  test_number_head.py  test_number_token_loss.py  test_run_language_modeling.py
(+159 files in other folders)
