[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ntl"
version = "0.1.0"
description = "Number token loss"
authors = [
    {name = "Jannis Born", email = "jab@zurich.ibm.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"


[tool.setuptools.packages.find]
where = ["src"]
